--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,21 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
 
-.labelBkg {
-    background-color: rgba(248.6666666666, 255, 235.9999999999, 0.75);
+@custom-variant dark (&:where(.dark, .dark *));
+
+.hljs.language-mermaid line {
+  fill: white !important;
+  stroke: white !important;
+}
+
+.hljs.language-mermaid path {
+  stroke: white !important;
+}
+
+.hljs.language-mermaid text.messageText {
+  fill: white !important;
+}
+
+.hljs {
+  background-color: transparent !important;
 }
